hostpathvolume.yaml
#hostpath 
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx:alpine
    name: nginx
    volumeMounts:
      - mountPath: /data-pd
        name: test-volume
  volumes:
    - name: test-volume
      hostPath:
        path: /data     # must be made on node manually
        type: Directory
nodeselector:
  node: ozi-server
