pod-pvc-pv.yaml
#hostpath 
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx:alpine
    name: nginx
    volumeMounts:
      - mountPath: /data-pd
        name: test-volume   ##here
  volumes:
    - name: test-volume  ##match here
      persistentVolumeClaim:
        claimName: my-pvc   #same as pvc name
